<resources>
    <string name="app_name">demo</string>
    <string name="Login_PageTitle">用户登录</string>
    <string name="Login_TextView_UserName">账号</string>
    <string name="Login_EditText_UserName">学号/邮箱/用户名</string>
    <string name="Login_TextView_Passwd">密码</string>
    <string name="Login_EditText_Passwd">登录密码</string>
    <string name="Login_Button_Login">登录</string>
    <string name="Login_TextView_ForgetPasswd">忘记密码?</string>
    <string name="Login_TextView_Register">用户注册!</string>
    <string name="Login_TextView_ReadAgreement">登录即代表阅读并同意</string>
    <string name="Login_TextView_SeviceAgreement">服务协议</string>

    <string name="Register_TextView_Register">注册</string>
    <string name="Register_TextView_Name">姓名</string>
    <string name="Register_EditText_Name">请输入姓名</string>
    <string name="Register_TextView_SchoolName">学校</string>
    <string name="Register_EditText_SchoolName">请输入学校名称</string>
    <string name="Register_TextView_StudentID">学号</string>
    <string name="Register_EditText_StudentID">请输入本人学号</string>
    <string name="Register_TextView_Passwd">密码</string>
    <string name="Register_EditText_Passwd">请输入密码</string>
    <string name="Register_EditText_PasswdAgain">请再次确认密码</string>
    <string name="Register_TextView_VerificationCode">验证码</string>
    <string name="Register_EditText_VerificationCode">请输入4位验证码</string>
    <string name="Register_TextView_ReadAgreement">注册即代表同意</string>
    <string name="Register_TextView_SeviceAgreement">《用户协议》</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="Main_RadioButton_CheckIn">签到</string>
    <string name="Main_RadioButton_Bulletin">通报栏</string>
    <string name="Main_RadioButton_Mine">我的</string>
    <string name="Main_Button_QuitLogin">退出登录</string>
</resources>
