<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.bignerdranch.android.demo.RegisterActivity"
    android:background="#eeeeee"
    >

    <RelativeLayout
        android:id="@+id/rl_registeractivity_top"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@color/color_minefragment_top"
        >
        <ImageView
            android:id="@+id/iv_registeractivity_back"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/ic_left_back"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:clickable="true"
            android:onClick="onClick"
            />

        <TextView
            android:id="@+id/tv_registeractivity_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Register_TextView_Register"
            android:textColor="#fff"
            android:textSize="20dp"
            android:layout_toRightOf="@+id/iv_registeractivity_back"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/ll_registeractivity_body"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/rl_registeractivity_top"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        >
        <!-- 第一个文本编辑框  输入用户名 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/tv_registeractivity_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Register_TextView_Name"/>
            <EditText
                android:id="@+id/et_registeractivity_username"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/Register_EditText_Name"
                android:gravity="center_vertical"
                android:layout_marginStart="22dp"
                />
        </LinearLayout>
        <!--新增一个文本编辑框  输入学校-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/tv_registeractivity_SchoolName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Register_TextView_SchoolName"/>
            <EditText
                android:id="@+id/et_registeractivity_SchoolName"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center_vertical"
                android:layout_marginStart="22dp"
                android:hint="@string/Register_EditText_SchoolName" />
        </LinearLayout>
        <!--新增一个文本编辑框  输入学号-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/tv_registeractivity_StudentID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Register_TextView_StudentID"/>
            <EditText
                android:id="@+id/et_registeractivity_StudentID"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center_vertical"
                android:layout_marginStart="22dp"
                android:hint="@string/Register_EditText_StudentID" />
        </LinearLayout>
        <!-- 第二个文本编辑框  输入密码 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/tv_registeractivity_password1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Register_TextView_Passwd"/>
            <EditText
                android:id="@+id/et_registeractivity_password1"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center_vertical"
                android:layout_marginStart="22dp"
                android:inputType="textPassword"
                android:hint="@string/Register_EditText_Passwd" />
        </LinearLayout>
        <!-- 第三个文本编辑框  再次输入密码 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/tv_registeractivity_password2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Register_TextView_Passwd"/>
            <EditText
                android:id="@+id/et_registeractivity_password2"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/Register_EditText_PasswdAgain"
                android:gravity="center_vertical"
                android:layout_marginLeft="22dp"
                android:inputType="textPassword"
                />
        </LinearLayout>
        <!-- 验证码部分 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="15dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal" >
            <!-- 第四个文本编辑框  输入验证码 -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/tv_registeractivity_phoneCodes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Register_TextView_VerificationCode"/>
                <EditText
                    android:id="@+id/et_registeractivity_phoneCodes"
                    android:layout_width="0dp"
                    android:layout_weight="3"
                    android:layout_height="50dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:hint="@string/Register_EditText_VerificationCode" />

                <ImageView
                    android:id="@+id/iv_registeractivity_showCode"
                    android:layout_width="0dp"
                    android:layout_height="70dp"
                    android:layout_weight="1.5"
                    android:clickable="true"
                    android:onClick="onClick"
                    android:layout_marginTop="-10dp"
                    />
            </LinearLayout>
        </LinearLayout>
        <!-- 注册按钮 -->
        <Button
            android:id="@+id/bt_registeractivity_register"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="5dp"
            android:background="@drawable/selector_loginactivity_button"
            android:textColor="#fff"
            android:text="@string/Register_TextView_Register"
            android:onClick="onClick"
            android:layout_marginTop="25dp"
            />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/rl_registeractivity_bottom"
            android:layout_marginTop="10dp"
            >
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true">
                <TextView
                    android:id="@+id/tv_registeractivity_ReadAgreement"
                    android:text="@string/Register_TextView_ReadAgreement"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Register_TextView_SeviceAgreement"
                    android:textColor="#11a7f9"
                    android:layout_toStartOf="@+id/tv_registeractivity_ReadAgreement"/>
            </LinearLayout>

        </RelativeLayout>

    </LinearLayout>

</RelativeLayout>